--- a/README
+++ b/README
@@ -1,1 +1,3 @@
+# PM2024_Proceeding
+
 This repository contains the data in the Figures of the proceeding "Characterization of light yield non-proportionality in plastic scintillator-based detectors for satellite cosmic-ray experiments", Loizzo P., Cerasole D. et al. (2024, _submitted_)
